--- a/source/stylesheets/pages/_index.scss
+++ b/source/stylesheets/pages/_index.scss
@@ -1,3 +1,8 @@
 // Import page-specific CSS files here.
 @import "home";
 @import "about";
+@import "team";
+
+.container {
+  background-color: white;
+}
