--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -1,15 +1,19 @@
 ---
 title: Le Wagon - Middleman
 ---
+<%= partial "layouts/navbar" %>   <!-- inject layouts/_navbar.html.erb -->
 
-<div id="home">
-  <div class="home-content">
-    <%= image_tag "logo.png", width: "200" %>
-    <p>
-      Middleman is now running!
-    </p>
-    <p class="about">
-      <%= link_to "More about this template", "about.html" %>
-    </p>
+<%= partial "layouts/banner" %>
+<div class="container">
+  <div class="col-xs-12 col-md-4">
+    <%= partial "layouts/card" %>
+  </div>
+  <div class="col-xs-12 col-md-4">
+    <%= partial "layouts/card" %>
+  </div>
+  <div class="col-xs-12 col-md-4">
+    <%= partial "layouts/card" %>
   </div>
 </div>
+
+<%= partial "layouts/footer" %>   <!-- inject layouts/_footer.html.erb -->
